# lliurex-auto-upgrade-plasmoid

./: CMakeLists.txt  README.md
applets/: CMakeLists.txt
applets/lliurexautoupgrade/: CMakeLists.txt
applets/lliurexautoupgrade/knotifications5/: lliurexautoupgrade.notifyrc
applets/lliurexautoupgrade/knotifications6/: lliurexautoupgrade.notifyrc
applets/lliurexautoupgrade/package/: metadata.desktop  metadata.json
applets/lliurexautoupgrade/package/contents/ui/: InfoView.qml  LatestPkg.qml  main.qml
applets/lliurexautoupgrade/plugin/: LliurexAutoUpgradeWidget.cpp  LliurexAutoUpgradeWidget.h  LliurexAutoUpgradeWidgetUtils.cpp  LliurexAutoUpgradeWidgetUtils.h  plugin.cpp  plugin.h  qmldir
debian/: changelog  control  copyright  lliurex-auto-upgrade-plasmoid.dirs  lliurex-auto-upgrade-plasmoid.install  lliurex-auto-upgrade-plasmoid.postinst  lliurex-auto-upgrade-plasmoid.postrm  rules
llx-resources/lliurex-auto-upgrade-plasmoid/desktops/: lliurex-auto-upgrade-plasmoid.desktop
po/: plasma_applet_org.kde.plasma.lliurexautoupgrade.pot  update_translations.sh
po/ca/: plasma_applet_org.kde.plasma.lliurexautoupgrade.po
po/ca@valencia/: plasma_applet_org.kde.plasma.lliurexautoupgrade.po
po/en_GB/: plasma_applet_org.kde.plasma.lliurexautoupgrade.po
po/es/: plasma_applet_org.kde.plasma.lliurexautoupgrade.po
